# tstcls

./: pyproject.toml  tstcls.py
.github/workflows/: ci.yaml
