[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "pytest-tstcls"
version = "2022.1.1"
description = "Test Class Base"
authors = ["Singular Labs, Inc <devs@singular.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/singular-labs/tstcls"
keywords = ["pytest", "test", "class", "base"]
packages = [
    { include = "tstcls.py" }
]

[tool.poetry.dependencies]
python = ">=3.10"
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
