[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "pytest-tstcls"
version = "2024.3.1"
description = "Test Class Base"
authors = ["Singular Labs, Inc <devs@singular.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/singular-labs/tstcls"
keywords = ["pytest", "test", "class", "base"]
packages = [
    { include = "tstcls.py" }
]

[tool.poetry.dependencies]
python = ">=3.10"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
target-version = "py310"
line-length = 120

lint.select = ["ANN", "I", "N", "UP", "PGH", "RUF", "F", "FA"]
lint.ignore = ["E731", "ANN101", "ANN102", "RUF009"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["ANN"]


[[tool.mypy.overrides]]
ignore_missing_imports = true
